<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
	xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:tools="http://schemas.android.com/tools"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	android:orientation="vertical"
	tools:context="com.liulishuo.engzo.lingorecorder.demo.activity.FlacDemonstrateActivity">
	
	<TextView
		android:layout_width="match_parent"
		android:layout_height="match_parent"
		android:id="@+id/tv_unsuport_view"
		android:text="@string/flac_unsupport"
		android:gravity="center"
		android:textColor="@android:color/black"
		tools:visibility="gone"/>
	
	<LinearLayout
		android:layout_width="match_parent"
		android:layout_height="match_parent"
		android:id="@+id/view_demonstrate"
		android:orientation="vertical">
		
		<TextView
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:text="@string/record_output_address"
			android:layout_marginTop="20dp"
			android:layout_marginLeft="20dp"
			android:layout_marginStart="20dp"
		/>
		
		<EditText
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:id="@+id/et_output_file"
			android:inputType="text"
			android:textColor="@android:color/black"
			android:text="@string/sdcard_test_flac"
			android:layout_marginLeft="20dp"
			android:layout_marginStart="20dp"
			android:layout_marginTop="10dp"/>
		
		<Button
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:layout_marginTop="20dp"
			android:layout_marginLeft="20dp"
			android:layout_marginStart="20dp"
			android:layout_marginRight="20dp"
			android:layout_marginEnd="20dp"
			android:textAllCaps="false"
			android:text="@string/start_record"
			android:id="@+id/btn_record"
		/>
		
		<TextView
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:layout_margin="20dp"
			android:text="@string/record_duration"
			android:textColor="@android:color/black"
			android:id="@+id/record_duration"
		/>
		
		<TextView
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:layout_margin="20dp"
			android:text="@string/record_size"
			android:textColor="@android:color/black"
			android:id="@+id/record_size"
		/>
	
	</LinearLayout>

</LinearLayout>
