<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
	xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:tools="http://schemas.android.com/tools"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	tools:context="com.liulishuo.engzo.lingorecorder.demo.activity.AcrossProcessDemonstrateActivity"
	android:orientation="vertical">
	
	<TextView
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:text="@string/please_read"
		android:layout_marginTop="20dp"
		android:layout_marginLeft="20dp"
		android:layout_marginStart="20dp"
	/>
	
	<TextView
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:text="@string/scorer_sentence"
		android:textColor="@android:color/black"
		android:layout_marginTop="20dp"
		android:layout_marginLeft="20dp"
		android:layout_marginStart="20dp"
	/>
	
	<Button
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:layout_marginTop="20dp"
		android:layout_marginLeft="20dp"
		android:layout_marginStart="20dp"
		android:layout_marginRight="20dp"
		android:layout_marginEnd="20dp"
		android:textAllCaps="false"
		android:text="@string/start_scorer"
		android:id="@+id/btn_scorer"
	/>
	
	<TextView
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:text="@string/scorer_result"
		android:textColor="@android:color/black"
		android:layout_marginTop="20dp"
		android:layout_marginLeft="20dp"
		android:layout_marginStart="20dp"
		android:id="@+id/tv_scorer_result"
	/>

</LinearLayout>
